1. copy/rename http_session to pfcp_session

--- a/src/plugins/upf/CMakeLists.txt
+++ b/src/plugins/upf/CMakeLists.txt
@@ -42,6 +42,7 @@ if(HS_FOUND)
     upf_pfcp_api.c
     upf_pfcp_input.c
     upf_pfcp_server.c
+    upf_pfcp_session_server.c
     upf_proxy.c
     upf_adf.c
     flowtable_init.c
