rework upf process and proxy nodes
* rename upf_adf to upf_app_dp
* move to_proxy socket logic into new proxy_accept node
* mode ADF functions in seperate file
* temporarily disable ADF processing

--- a/src/plugins/upf/CMakeLists.txt
+++ b/src/plugins/upf/CMakeLists.txt
@@ -33,6 +33,8 @@ if(HS_FOUND)
     upf_gtpu_decap.c
     upf_flow_node.c
     upf_classify.c
+    upf_adf.c
+    upf_tdf.c
     upf_process.c
     upf_session_dpo.c
     pfcp.c
@@ -40,8 +42,9 @@ if(HS_FOUND)
     upf_pfcp_api.c
     upf_pfcp_server.c
     upf_pfcp_session_server.c
+    upf_proxy_accept.c
     upf_proxy.c
-    upf_adf.c
+    upf_app_db.c
     flowtable_init.c
     flowtable.c
 
@@ -50,6 +53,8 @@ if(HS_FOUND)
     upf_gtpu_decap.c
     upf_flow_node.c
     upf_classify.c
+    upf_tdf.c
+    upf_proxy_accept.c
     upf_process.c
     upf_session_dpo.c
 
@@ -63,7 +68,7 @@ if(HS_FOUND)
     upf_pfcp_api.h
     upf_pfcp_server.h
     upf_proxy.h
-    upf_adf.h
+    upf_app_db.h
     flowtable.h
     flowtable_tcp.h
 
